# gotts

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  run_manual_test.sh  windows.patch
.ci/: general-jobs  release-jobs
.github/workflows/: ci.yml  release.yml
api/: Cargo.toml
api/src/: auth.rs  client.rs  handlers.rs  lib.rs  rest.rs  router.rs  types.rs  web.rs
api/src/handlers/: blocks_api.rs  chain_api.rs  peers_api.rs  pool_api.rs  server_api.rs  transactions_api.rs  utils.rs  version_api.rs
api/tests/: rest.rs
chain/: Cargo.toml
chain/src/: chain.rs  error.rs  lib.rs  pipe.rs  store.rs  txhashset.rs  types.rs
chain/src/txhashset/: rewindable_kernel_view.rs  txhashset.rs  utxo_view.rs
chain/tests/: chain_test_helper.rs  data_file_integrity.rs  mine_simple_chain.rs  store_indices.rs  test_coinbase_maturity.rs  test_txhashset.rs  test_txhashset_archive.rs
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs  types.rs
core/: Cargo.toml
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: block_read.rs  compact_block_read.rs  transaction_read.rs
core/fuzz/src/: main.rs
core/src/: address.rs  consensus.rs  core.rs  genesis.rs  global.rs  lib.rs  macros.rs  pow.rs  ser.rs
core/src/core/: block.rs  block_sums.rs  committed.rs  compact_block.rs  hash.rs  id.rs  merkle_proof.rs  pmmr.rs  price.rs  transaction.rs  verifier_cache.rs
core/src/core/pmmr/: backend.rs  pmmr.rs  readonly_pmmr.rs  rewindable_pmmr.rs
core/src/libtx/: aggsig.rs  build.rs  error.rs  mod.rs  proof.rs  reward.rs  secp_ser.rs
core/src/pow/: common.rs  cuckaroo.rs  cuckarood.rs  cuckatoo.rs  error.rs  siphash.rs  types.rs
core/tests/: block.rs  common.rs  consensus.rs  core.rs  merkle_proof.rs  pmmr.rs  price.rs  transaction.rs  vec_backend.rs  verifier_cache.rs
diff0/: Cargo.toml
diff0/src/: diff0_algo.rs  lib.rs
docs/: TODO.md  build.md  intro.md  nit.md
etc/: Dockerfile  Dockerfile.floonet  crate-release.sh  shell.nix
etc/gen_gen/: README.md  _Cargo.toml
keychain/: Cargo.toml
keychain/src/: base58.rs  extkey_bip32.rs  keychain.rs  lib.rs  mnemonic.rs  types.rs
p2p/: Cargo.toml
p2p/fuzz/: Cargo.toml
p2p/fuzz/fuzz_targets/: read_ban_reason.rs  read_get_peer_addrs.rs  read_hand.rs  read_headers.rs  read_locator.rs  read_msg_header.rs  read_peer_addr.rs  read_peer_addrs.rs  read_peer_error.rs  read_ping.rs  read_pong.rs  read_shake.rs  read_tx_hashset_archive.rs  read_tx_hashset_request.rs
p2p/src/: conn.rs  handshake.rs  lib.rs  msg.rs  peer.rs  peers.rs  protocol.rs  serv.rs  store.rs  types.rs
p2p/tests/: peer_handshake.rs  ser_deser.rs
pool/: Cargo.toml
pool/src/: lib.rs  pool.rs  transaction_pool.rs  types.rs
pool/tests/: block_building.rs  block_max_weight.rs  block_reconciliation.rs  coinbase_maturity.rs  common.rs  transaction_pool.rs
servers/: Cargo.toml
servers/src/: common.rs  gotts.rs  lib.rs  mining.rs
servers/src/common/: adapters.rs  hooks.rs  stats.rs  types.rs
servers/src/gotts/: dandelion_monitor.rs  price_pool.rs  seed.rs  server.rs  sync.rs
servers/src/gotts/sync/: body_sync.rs  header_sync.rs  state_sync.rs  syncer.rs
servers/src/mining/: mine_block.rs  price_oracle.rs  price_store.rs  stratumserver.rs  test_miner.rs
store/: Cargo.toml
store/src/: leaf_set.rs  lib.rs  lmdb.rs  pmmr.rs  prune_list.rs  types.rs
store/tests/: lmdb.rs  pmmr.rs  prune_list.rs  test_bitmap.rs  utxo_set_perf.rs
util/: Cargo.toml
util/src/: file.rs  hex.rs  lib.rs  logger.rs  macros.rs  rate_counter.rs  read_write.rs  secp_static.rs  types.rs  zip.rs
util/tests/: file.rs  zip.rs
