[package]
name = "gotts"
version = "0.0.2"
authors = ["Gotts Developers <gotts.tech@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/gottstech/gotts"
keywords = [ "crypto", "gotts", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.gotts", "**/*.gotts2"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["api", "chain", "config", "core", "keychain", "p2p", "servers", "store", "util", "pool"]
exclude = ["etc/gen_gen"]

[[bin]]
name = "gotts"
path = "src/bin/gotts.rs"

[dependencies]
blake2-rfc = "0.2"
chrono = "0.4.4"
clap = { version = "2.31", features = ["yaml"] }
ctrlc = { version = "3.1", features = ["termination"] }
humansize = "1.1.0"
serde = "1"
serde_json = "1"
log = "0.4"
term = "0.5"
failure = "0.1"
failure_derive = "0.1"

gotts_api = { path = "./api", version = "0.0.2" }
gotts_chain = { path = "./chain", version = "0.0.2" }
gotts_config = { path = "./config", version = "0.0.2" }
gotts_core = { path = "./core", version = "0.0.2" }
gotts_keychain = { path = "./keychain", version = "0.0.2" }
gotts_p2p = { path = "./p2p", version = "0.0.2" }
gotts_servers = { path = "./servers", version = "0.0.2" }
gotts_util = { path = "./util", version = "0.0.2" }

[target.'cfg(windows)'.dependencies]
cursive = { version = "0.12", default-features = false, features = ["pancurses-backend"] }
[target.'cfg(windows)'.dependencies.pancurses]
version = "0.16.0"
features = ["win32"]
[target.'cfg(unix)'.dependencies]
cursive = "0.12"

[build-dependencies]
built = "0.3"

[dev-dependencies]
gotts_chain = { path = "./chain", version = "0.0.2" }
gotts_store = { path = "./store", version = "0.0.2" }
