[package]
name = "gotts_api"
version = "0.0.6"
authors = ["Gotts Developers <gotts.tech@lists.launchpad.net>"]
description = "APIs for gotts, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/gottstech/gotts"
keywords = [ "crypto", "gotts", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
enum_primitive = "0.1"
failure = "0.1.1"
failure_derive = "0.1.1"
hyper = "0.12"
lazy_static = "1"
regex = "1"
ring = "0.13"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
tokio = "0.1.7"
tokio-core = "0.1.17"
tokio-tcp = "0.1"
tokio-rustls = "0.7"
hyper-timeout = "0.2"
http = "0.1.5"
hyper-rustls = "0.14"
futures = "0.1.21"
rustls = "0.13"
url = "2.1"

gotts_core = { path = "../core", version = "0.0.6" }
gotts_chain = { path = "../chain", version = "0.0.6" }
gotts_p2p = { path = "../p2p", version = "0.0.6" }
gotts_pool = { path = "../pool", version = "0.0.6" }
gotts_store = { path = "../store", version = "0.0.6" }
gotts_util = { path = "../util", version = "0.0.6" }
