[package]
name = "gotts_chain"
version = "0.0.6"
authors = ["Gotts Developers <gotts.tech@lists.launchpad.net>"]
description = "Chain implementation for gotts, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/gottstech/gotts"
keywords = [ "crypto", "gotts", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bitflags = "1"
byteorder = "1"
failure = "0.1"
failure_derive = "0.1"
croaring = "0.4.4"
log = "0.4"
serde = "1"
serde_derive = "1"
chrono = { version = "0.4", features = ["serde"] }
lru-cache = "0.1"
lazy_static = "1"
regex = "1"

gotts_core = { path = "../core", version = "0.0.6" }
gotts_keychain = { path = "../keychain", version = "0.0.6" }
gotts_store = { path = "../store", version = "0.0.6" }
gotts_util = { path = "../util", version = "0.0.6" }

[dev-dependencies]
rand = "0.7"
