[package]
name = "gotts_config"
version = "0.0.3"
authors = ["Gotts Developers <gotts.tech@lists.launchpad.net>"]
description = "Configuration for gotts, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/gottstech/gotts"
keywords = [ "crypto", "gotts", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

gotts_core = { path = "../core", version = "0.0.3" }
gotts_servers = { path = "../servers", version = "0.0.3" }
gotts_p2p = { path = "../p2p", version = "0.0.3" }
gotts_util = { path = "../util", version = "0.0.3" }

[dev-dependencies]
pretty_assertions = "0.5.1"
