[package]
name = "gotts_core"
version = "0.0.2"
authors = ["Gotts Developers <gotts.tech@lists.launchpad.net>"]
description = "Chain implementation for gotts, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/gottstech/gotts"
keywords = [ "crypto", "gotts", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
bech32 = "0.7.1"
bitcoin_hashes = "0.7"
blake2-rfc = "0.2"
byteorder = "1"
croaring = "0.3.9"
crossbeam = "0.7"
enum_primitive = "0.1"
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1"
lru-cache = "0.1"
num = "0.2"
num-bigint = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
siphasher = "0.2"
uuid = { version = "0.6", features = ["serde", "v4"] }
log = "0.4"
chrono = { version = "0.4.4", features = ["serde"] }
zeroize = "0.9"

gotts_keychain = { path = "../keychain", version = "0.0.2" }
gotts_util = { path = "../util", version = "0.0.2" }

[dev-dependencies]
serde_json = "1"
