[package]
name = "diff0"
version = "0.1.0"
authors = ["Gotts Developers <gotts.tech@lists.launchpad.net>"]
description = "Compression and decompression for integer difference values which has a lot of zeros."
license = "Apache-2.0"
repository = "https://github.com/gottstech/gotts"
keywords = [ "compress", "gotts", "diff0", "encoding" ]
workspace = ".."
edition = "2018"

[dependencies]
byteorder = "1"
failure = "0.1"
itertools = "0.7"
log = "0.4"
serde = "1.0.93"

[dev-dependencies]
hex = "0.3"

