[package]
name = "gotts_keychain"
version = "0.0.4"
authors = ["Gotts Developers <gotts.tech@lists.launchpad.net>"]
description = "Chain implementation for gotts, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/gottstech/gotts"
keywords = [ "crypto", "gotts", "mimblewimble" ]
workspace = '..'
edition = "2018"

[dependencies]
byteorder = "1"
blake2-rfc = "0.2"
enum_primitive = "0.1"
failure = "0.1"
failure_derive = "0.1"
rand = "0.6"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = { version = "0.6", features = ["serde", "v4"] }
lazy_static = "1"
zeroize = "0.9"

digest = "0.7"
hex = "0.3"
hmac = "0.6"
ripemd160 = "0.7"
sha2 = "0.7"
pbkdf2 = "0.2"

gotts_util = { path = "../util", version = "0.0.4" }
