[package]
name = "gotts_pool"
version = "0.0.6"
authors = ["Gotts Developers <gotts.tech@lists.launchpad.net>"]
description = "Chain implementation for gotts, a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/gottstech/gotts"
keywords = [ "crypto", "gotts", "mimblewimble" ]
workspace = '..'
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
rand = "0.7"
serde = "1"
serde_json = "1.0"
serde_derive = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
failure_derive = "0.1"

gotts_core = { path = "../core", version = "0.0.6" }
gotts_keychain = { path = "../keychain", version = "0.0.6" }
gotts_store = { path = "../store", version = "0.0.6" }
gotts_util = { path = "../util", version = "0.0.6" }

[dev-dependencies]
gotts_chain = { path = "../chain", version = "0.0.6" }
