[package]
name = "gotts_servers"
version = "0.0.6"
authors = ["Gotts Developers <gotts.tech@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/gottstech/gotts"
keywords = [ "crypto", "gotts", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
byteorder = "1"
hyper = "0.12"
hyper-rustls = "0.14"
fs2 = "0.4"
futures = "0.1"
failure = "0.1"
failure_derive = "0.1"
http = "0.1"
itertools = "0.7"
lmdb-zero = "0.4.4"
rand = "0.6"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = { version = "0.4.7", features = ["serde"] }
tokio =  "0.1.11"

diff0 = { path = "../diff0", version = "0.1.0" }

gotts_api = { path = "../api", version = "0.0.6" }
gotts_chain = { path = "../chain", version = "0.0.6" }
gotts_core = { path = "../core", version = "0.0.6" }
gotts_keychain = { path = "../keychain", version = "0.0.6" }
gotts_p2p = { path = "../p2p", version = "0.0.6" }
gotts_pool = { path = "../pool", version = "0.0.6" }
gotts_store = { path = "../store", version = "0.0.6" }
gotts_util = { path = "../util", version = "0.0.6" }
